--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página Principal - Bianca Galeano</title>
+    <link rel="stylesheet" href="mi_pagina.css">
+</head>
+<body>
+    <header>
+        <h1 class="titulo-animado">Bienvenidos a mi sitio web</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2 class="subtitulo-animado">Navegación</h2>
+            <div class="botones">
+                <a href="pagina1.html" class="boton">Ir a Página 1</a>
+                <a href="pagina2.html" class="boton">Ir a Página 2</a>
+            </div>
+        </section>
+
+        <section>
+            <h2 class="subtitulo-animado">Descripción de las páginas</h2>
+            <p>Página 1: Contiene una tabla de productos con código, producto y precio.</p>
+            <p>Página 2: Contiene imágenes de los empleados mencionados en la tabla.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 - Bianca Galeano</p>
+    </footer>
+</body>
+</html>
 
