Update and rename pagina_1 to pagina_1.html

--- a/pagina_1.html
+++ b/pagina_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina_1 - Productos de Belleza - Bianca Galeano</title>
+    <title>Página 1 - Productos de Belleza - Bianca Galeano</title>
     <link rel="stylesheet" href="mi_pagina.css">
 </head>
 <body>
@@ -53,53 +53,7 @@
                         <td>Skin Care</td>
                     </tr>
                     <tr>
-                        <td>S002</td>
-                        <td>Serum Facial</td>
-                        <td>$25</td>
-                        <td>Skin Care</td>
-                    </tr>
-                    <tr>
-                        <td>S003</td>
-                        <td>Exfoliante</td>
-                        <td>$18</td>
-                        <td>Skin Care</td>
-                    </tr>
 
-                    <!-- Tratamiento para el pelo -->
-                    <tr>
-                        <td>P001</td>
-                        <td>Shampoo Reparador</td>
-                        <td>$15</td>
-                        <td>Tratamiento Pelo</td>
-                    </tr>
-                    <tr>
-                        <td>P002</td>
-                        <td>Acondicionador</td>
-                        <td>$12</td>
-                        <td>Tratamiento Pelo</td>
-                    </tr>
-                    <tr>
-                        <td>P003</td>
-                        <td>Mascarilla Capilar</td>
-                        <td>$20</td>
-                        <td>Tratamiento Pelo</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
-        <!-- Navegación -->
-        <section>
-            <h2 class="subtitulo-animado">Navegación</h2>
-            <div class="botones">
-                <a href="index.html" class="boton">Ir a Página Principal</a>
-                <a href="pagina2.html" class="boton">Ir a pagina_2</a>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 - Bianca Galeano</p>
     </footer>
 </body>
 </html>
