--- a/pagina_2.html
+++ b/pagina_2.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página 2 - Empleados - Bianca Galeano</title>
+    <link rel="stylesheet" href="mi_pagina.css">
+</head>
+<body>
+    <header>
+        <h1 class="titulo-animado">Conoce a Nuestro Equipo</h1>
+    </header>
+
+    <main>
+        <!-- Sección de empleados -->
+        <section>
+            <h2 class="subtitulo-animado">Empleados</h2>
+            <div class="empleados">
+                <div class="empleado">
+                    <img src="empleado1.jpg" alt="Empleado 1">
+                    <p>María - Maquillaje</p>
+                </div>
+                <div class="empleado">
+                    <img src="empleado2.jpg" alt="Empleado 2">
+                    <p>Juan - Skin Care</p>
+                </div>
+                <div class="empleado">
+                    <img src="empleado3.jpg" alt="Empleado 3">
+                    <p>Laura - Tratamiento Pelo</p>
+                </div>
+                <div class="empleado">
+                    <img src="empleado4.jpg" alt="Empleado 4">
+                    <p>Carlos - Maquillaje</p>
+                </div>
+                <div class="empleado">
+                    <img src="empleado5.jpg" alt="Empleado 5">
+                    <p>Ana - Skin Care</p>
+                </div>
+                <div class="empleado">
+                    <img src="empleado6.jpg" alt="Empleado 6">
+                    <p>Pedro - Tratamiento Pelo</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Navegación -->
+        <section>
+            <h2 class="subtitulo-animado">Navegación</h2>
+            <div class="botones">
+                <a href="index.html" class="boton">Ir a Página Principal</a>
+                <a href="pagina_1.html" class="boton">Ir a Página 1</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 - Bianca Galeano</p>
+    </footer>
+</body>
+</html>
 
