--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <section>
             <h2 class="subtitulo-animado">Navegación</h2>
             <div class="botones">
-                <a href="pagina1.html" class="boton">Ir a pagina_1</a>
-                <a href="pagina2.html" class="boton">Ir a pagina_2</a>
+                <a href="pagina_1.html" class="boton">Ir a pagina_1.html</a>
+                <a href="pagina_2.html" class="boton">Ir a pagina_2.html</a>
             </div>
         </section>
 
