--- a/index.html
+++ b/index.html
@@ -12,24 +12,9 @@
     </header>
 
     <main>
+        <!-- Navegación -->
         <section>
             <h2 class="subtitulo-animado">Navegación</h2>
             <div class="botones">
-                <a href="pagina_1.html" class="boton">Ir a pagina_1.html</a>
-                <a href="pagina_2.html" class="boton">Ir a pagina_2.html</a>
-            </div>
-        </section>
-
-        <section>
-            <h2 class="subtitulo-animado">Descripción de las páginas</h2>
-            <p>Página 1: Contiene una tabla de productos con código, producto y precio.</p>
-            <p>Página 2: Contiene imágenes de los empleados mencionados en la tabla.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 - Bianca Galeano</p>
-    </footer>
-</body>
-</html>
+                <a href="pagina_1.html" class="boton">Ir a Página_
 
