--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
     </header>
 
     <main>
-        <!-- Navegación -->
+        <!-- Sección de navegación con botones -->
         <section>
-            <h2 class="subtitulo-animado">Navegación</h2>
+            <h2 class="subtitulo-animado">Ir a las páginas</h2>
             <div class="botones">
-                <a href="pagina_1.html" class="boton">Ir a Página_
+                <a href="pagina_1.html" class="boton">Ir a Página 1</a>
+                <a href="pagina_2.html" class="boton">Ir a Página 2</a>
+            </div>
+        </section>
+
+        <!-- Descripción de las páginas -->
+        <section>
+            <h2 class="subtitulo-animado">Descripción de las páginas</h2>
+            <p><strong>Página 1:</strong> Contiene una tabla de productos de belleza (maquillaje, skin care y tratamiento para el pelo).</p>
+            <p><strong>Página 2:</strong> Contiene imágenes de los empleados mencionados en la tabla, con animación y estilo.</p>
+        </section>
+    </ma
+
 
