--- a/pagina_2.html
+++ b/pagina_2.html
@@ -17,27 +17,27 @@
             <h2 class="subtitulo-animado">Empleados</h2>
             <div class="empleados">
                 <div class="empleado">
-                    <img src="empleado1.jpg" alt="Empleado 1">
+                    <img src="https://img.freepik.com/fotos-premium/retrato-cerca-mujer-sincera-sonriente-atractiva-dientes-blancos-mirando-camara-aislada-cabello-largo-rizado-blusa-blanca-elegante-estilo-negocios-emocion-positiva-feliz-maquillaje-labios-rojo_343960-24039.jpg" alt="Empleado 1">
                     <p>María - Maquillaje</p>
                 </div>
                 <div class="empleado">
-                    <img src="empleado2.jpg" alt="Empleado 2">
+                    <img src="https://tse2.mm.bing.net/th/id/OIP.ZeAlT9gKWSj4IHiYmanMsAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Empleado 2">
                     <p>Juan - Skin Care</p>
                 </div>
                 <div class="empleado">
-                    <img src="empleado3.jpg" alt="Empleado 3">
+                    <img src="https://img.freepik.com/premium-photo/attractive-school-teacher-isolated_115919-22921.jpg" alt="Empleado 3">
                     <p>Laura - Tratamiento Pelo</p>
                 </div>
                 <div class="empleado">
-                    <img src="empleado4.jpg" alt="Empleado 4">
+                    <img src="https://c8.alamy.com/comp/E8DDPD/handsome-businessman-sitting-at-office-desk-E8DDPD.jpg" alt="Empleado 4">
                     <p>Carlos - Maquillaje</p>
                 </div>
                 <div class="empleado">
-                    <img src="empleado5.jpg" alt="Empleado 5">
+                    <img src="https://img.freepik.com/premium-photo/female-waiter-taking-order-isolated_1034143-2109.jpg" alt="Empleado 5">
                     <p>Ana - Skin Care</p>
                 </div>
                 <div class="empleado">
-                    <img src="empleado6.jpg" alt="Empleado 6">
+                    <img src="https://thumbs.dreamstime.com/b/professional-businessman-suit-his-office-working-business-corporate-image-young-succesful-entrepreneur-work-97025134.jpg" alt="Empleado 6">
                     <p>Pedro - Tratamiento Pelo</p>
                 </div>
             </div>
