--- a/pagina_2.html
+++ b/pagina_2.html
@@ -17,5 +17,44 @@
             <h2 class="subtitulo-animado">Empleados</h2>
             <div class="empleados">
                 <div class="empleado">
-                    <img src="https://img.freepik.com/fotos-premium/retrato-cerca-mujer-sincera-sonriente-atractiva-dientes-blancos-mira
+                    <img src="https://img.freepik.com/fotos-premium/retrato-cerca-mujer-sincera-sonriente-atractiva-dientes-blancos-mirando-camara-aislada-cabello-largo-rizado-blusa-blanca-elegante-estilo-negocios-emocion-positiva-feliz-maquillaje-labios-rojo_343960-24039.jpg" alt="Empleado 1" width="100" height="100">
+                    <p>María - Maquillaje</p>
+                </div>
+                <div class="empleado">
+                    <img src="https://tse2.mm.bing.net/th/id/OIP.ZeAlT9gKWSj4IHiYmanMsAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Empleado 2" width="100" height="100">
+                    <p>Juan - Skin Care</p>
+                </div>
+                <div class="empleado">
+                    <img src="https://img.freepik.com/premium-photo/attractive-school-teacher-isolated_115919-22921.jpg" alt="Empleado 3" width="100" height="100">
+                    <p>Laura - Tratamiento Pelo</p>
+                </div>
+                <div class="empleado">
+                    <img src="https://c8.alamy.com/comp/E8DDPD/handsome-businessman-sitting-at-office-desk-E8DDPD.jpg" alt="Empleado 4" width="100" height="100">
+                    <p>Carlos - Maquillaje</p>
+                </div>
+                <div class="empleado">
+                    <img src="https://img.freepik.com/premium-photo/female-waiter-taking-order-isolated_1034143-2109.jpg" alt="Empleado 5" width="100" height="100">
+                    <p>Ana - Skin Care</p>
+                </div>
+                <div class="empleado">
+                    <img src="https://thumbs.dreamstime.com/b/professional-businessman-suit-his-office-working-business-corporate-image-young-succesful-entrepreneur-work-97025134.jpg" alt="Empleado 6" width="100" height="100">
+                    <p>Pedro - Tratamiento Pelo</p>
+                </div>
+            </div>
+        </section>
 
+        <!-- Navegación -->
+        <section>
+            <h2 class="subtitulo-animado">Navegación</h2>
+            <div class="botones">
+                <a href="index.html" class="boton">Ir a Página Principal</a>
+                <a href="pagina_1.html" class="boton">Ir a Página 1</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 - Bianca Galeano</p>
+    </footer>
+</body>
+</html>
