--- a/pagina_2.html
+++ b/pagina_2.html
@@ -17,27 +17,27 @@
             <h2 class="subtitulo-animado">Empleados</h2>
             <div class="empleados">
                 <div class="empleado">
-                    <img src="https://img.freepik.com/fotos-premium/retrato-cerca-mujer-sincera-sonriente-atractiva-dientes-blancos-mirando-camara-aislada-cabello-largo-rizado-blusa-blanca-elegante-estilo-negocios-emocion-positiva-feliz-maquillaje-labios-rojo_343960-24039.jpg" alt="Empleado 1" width="100" height="100">
+                    <img src="https://images.unsplash.com/photo-1603415526960-f8f5b6b6a9c6?crop=entropy&cs=tinysrgb&fit=crop&h=100&w=100" alt="María - Maquillaje" width="100" height="100">
                     <p>María - Maquillaje</p>
                 </div>
                 <div class="empleado">
-                    <img src="https://tse2.mm.bing.net/th/id/OIP.ZeAlT9gKWSj4IHiYmanMsAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Empleado 2" width="100" height="100">
+                    <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?crop=entropy&cs=tinysrgb&fit=crop&h=100&w=100" alt="Juan - Skin Care" width="100" height="100">
                     <p>Juan - Skin Care</p>
                 </div>
                 <div class="empleado">
-                    <img src="https://img.freepik.com/premium-photo/attractive-school-teacher-isolated_115919-22921.jpg" alt="Empleado 3" width="100" height="100">
+                    <img src="https://images.unsplash.com/photo-1502767089025-6572583495b9?crop=entropy&cs=tinysrgb&fit=crop&h=100&w=100" alt="Laura - Tratamiento Pelo" width="100" height="100">
                     <p>Laura - Tratamiento Pelo</p>
                 </div>
                 <div class="empleado">
-                    <img src="https://c8.alamy.com/comp/E8DDPD/handsome-businessman-sitting-at-office-desk-E8DDPD.jpg" alt="Empleado 4" width="100" height="100">
+                    <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?crop=entropy&cs=tinysrgb&fit=crop&h=100&w=100" alt="Carlos - Maquillaje" width="100" height="100">
                     <p>Carlos - Maquillaje</p>
                 </div>
                 <div class="empleado">
-                    <img src="https://img.freepik.com/premium-photo/female-waiter-taking-order-isolated_1034143-2109.jpg" alt="Empleado 5" width="100" height="100">
+                    <img src="https://images.unsplash.com/photo-1590080871684-1e0d79e69f0b?crop=entropy&cs=tinysrgb&fit=crop&h=100&w=100" alt="Ana - Skin Care" width="100" height="100">
                     <p>Ana - Skin Care</p>
                 </div>
                 <div class="empleado">
-                    <img src="https://thumbs.dreamstime.com/b/professional-businessman-suit-his-office-working-business-corporate-image-young-succesful-entrepreneur-work-97025134.jpg" alt="Empleado 6" width="100" height="100">
+                    <img src="https://images.unsplash.com/photo-1603415526960-f8f5b6b6a9c6?crop=entropy&cs=tinysrgb&fit=crop&h=100&w=100" alt="Pedro - Tratamiento Pelo" width="100" height="100">
                     <p>Pedro - Tratamiento Pelo</p>
                 </div>
             </div>
@@ -58,3 +58,4 @@
     </footer>
 </body>
 </html>
+
