--- a/pagina_2.html
+++ b/pagina_2.html
@@ -17,7 +17,7 @@
             <h2 class="subtitulo-animado">Empleados</h2>
             <div class="empleados">
                 <div class="empleado">
-                    <img src="https://images.unsplash.com/photo-1603415526960-f8f5b6b6a9c6?crop=entropy&cs=tinysrgb&fit=crop&h=100&w=100" alt="María - Maquillaje" width="100" height="100">
+                    <img src="https://tse4.mm.bing.net/th/id/OIP.rWUxqg7NBlWsl0_MMvdYPwHaE7?rs=1&pid=ImgDetMain&o=7&rm=3" alt="María - Maquillaje" width="100" height="100">
                     <p>María - Maquillaje</p>
                 </div>
                 
